Этап LR-BE-0701 — LR-BE-0708 полностью реализован
